# sidpax

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.devcontainer/cpu/: devcontainer.json  post-create.sh
.devcontainer/cuda12/: devcontainer.json  post-create.sh
.github/workflows/: ci.yml  copilot-setup-steps.yml  tests.yml
examples/: attas_lat_pr.py  attas_sp.py  attas_sp_ipopt.py  virttac_sp.py
examples/data/: .gitignore
scripts/: download-virttac-dataset  install-coinhsl  install-ipopt
src/sidpax/: __init__.py  cli.py  common.py  mat.py  modeling.py  oem.py  sem.py  sparse.py  stats.py  tree.py
test/: conftest.py  test_common.py  test_mat.py  test_sparse.py  test_stats.py
